objects/Contact_Staging_Area__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Staging_Area_Prospect__r.Prospect_Instance__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Instance</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts Staging Area</relationshipLabel>
        <relationshipName>Contacts_Staging_Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DUNS_Enrichment__c</fullName>
        <externalId>true</externalId>
        <label>DUNS_Enrichment</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp; &apos; &apos; &amp; IF( ISBLANK(Middle_Name__c),&apos;&apos;,Middle_Name__c &amp; &apos; &apos;) &amp;  Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Id__c</fullName>
        <label>Individual_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRC_Code__c</fullName>
        <label>MRC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Email_Address__c</fullName>
        <label>Primary Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Staging_Area_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staging Area Prospect</label>
        <referenceTo>Prospect_Staging_Area__c</referenceTo>
        <relationshipLabel>Contacts Staging Area</relationshipLabel>
        <relationshipName>Contacts_Staging_Area</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contact Staging Area</label>
    <nameField>
        <label>CSA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts Staging Area</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>